Fix/36265 pa fsm (#1190)
added FSM to be implemented by ProtocolAdapterWrapper.

This new state machine is more granular and allows the higher level adapter state to be broken down in internal state.

---------

Co-authored-by: marregui <miguel.arregui@gmail.com>