@@ -58,6 +58,7 @@ import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.Future;
 import java.util.function.Function;
+import java.util.function.Supplier;
 import java.util.stream.Collectors;
 
 import static com.hivemq.persistence.domain.DomainTagAddResult.DomainTagPutStatus.ADAPTER_MISSING;
@@ -68,7 +69,7 @@ import static com.hivemq.persistence.domain.DomainTagAddResult.DomainTagPutStatu
 public class ProtocolAdapterManager {
     private static final Logger log = LoggerFactory.getLogger(ProtocolAdapterManager.class);
 
-    private final @NotNull Map<String, ProtocolAdapterWrapper> protocolAdapters = new ConcurrentHashMap<>();
+    private final @NotNull Map<String, ProtocolAdapterWrapper> protocolAdapters;
     private final @NotNull MetricRegistry metricRegistry;
     private final @NotNull ModuleServicesImpl moduleServices;
     private final @NotNull HiveMQEdgeRemoteService remoteService;
@@ -112,6 +113,7 @@ public class ProtocolAdapterManager {
         this.northboundConsumerFactory = northboundConsumerFactory;
         this.tagManager = tagManager;
         this.protocolAdapterConfig = protocolAdapterConfig;
+        this.protocolAdapters = new ConcurrentHashMap<>();
         this.executorService = Executors.newSingleThreadExecutor();
         Runtime.getRuntime().addShutdownHook(new Thread(executorService::shutdown));
         protocolAdapterWritingService.addWritingChangedCallback(() -> protocolAdapterFactoryManager.writingEnabledChanged(
@@ -120,8 +122,33 @@ public class ProtocolAdapterManager {
 
     // API, must be threadsafe
 
+    private static void syncFuture(final @NotNull Future<?> future) {
+        try {
+            future.get();
+        } catch (final InterruptedException e) {
+            Thread.currentThread().interrupt();
+            log.error("Interrupted while async execution: ", e.getCause());
+        } catch (final ExecutionException e) {
+            log.error("Exception happened while async execution: ", e.getCause());
+        }
+    }
+
+    public static <T> @NotNull T runWithContextLoader(
+            final @NotNull ClassLoader contextLoader,
+            final @NotNull Supplier<T> wrapperSupplier) {
+        final ClassLoader contextClassLoader = Thread.currentThread().getContextClassLoader();
+        try {
+            Thread.currentThread().setContextClassLoader(contextLoader);
+            return wrapperSupplier.get();
+        } finally {
+            Thread.currentThread().setContextClassLoader(contextClassLoader);
+        }
+    }
+
     public void start() {
-        log.debug("Starting adapters");
+        if (log.isDebugEnabled()) {
+            log.debug("Starting adapters");
+        }
         protocolAdapterConfig.registerConsumer(this::refresh);
     }
 
@@ -129,8 +156,7 @@ public class ProtocolAdapterManager {
         executorService.submit(() -> {
             log.info("Refreshing adapters");
 
-            final Map<String, ProtocolAdapterConfig> protocolAdapterConfigs = configs
-                    .stream()
+            final Map<String, ProtocolAdapterConfig> protocolAdapterConfigs = configs.stream()
                     .map(configConverter::fromEntity)
                     .collect(Collectors.toMap(ProtocolAdapterConfig::getAdapterId, Function.identity()));
 
@@ -150,11 +176,15 @@ public class ProtocolAdapterManager {
 
             adaptersToBeDeleted.forEach(name -> {
                 try {
-                    log.debug("Deleting adapter '{}'", name);
-                    stopAsync(name, true)
-                            .whenComplete((ignored, t) -> deleteAdapterInternal(name))
-                            .get();
-                } catch (final InterruptedException | ExecutionException e) {
+                    if (log.isDebugEnabled()) {
+                        log.debug("Deleting adapter '{}'", name);
+                    }
+                    stopAsync(name, true).whenComplete((ignored, t) -> deleteAdapterInternal(name)).get();
+                } catch (final InterruptedException e) {
+                    Thread.currentThread().interrupt();
+                    failedAdapters.add(name);
+                    log.error("Interrupted while deleting adapter {}", name, e);
+                } catch (final ExecutionException e) {
                     failedAdapters.add(name);
                     log.error("Failed deleting adapter {}", name, e);
                 }
@@ -162,9 +192,16 @@ public class ProtocolAdapterManager {
 
             adaptersToBeCreated.forEach(name -> {
                 try {
-                    log.debug("Creating adapter '{}'", name);
-                    startAsync(createAdapterInternal(protocolAdapterConfigs.get(name), versionProvider.getVersion())).get();
-                } catch (final InterruptedException | ExecutionException e) {
+                    if (log.isDebugEnabled()) {
+                        log.debug("Creating adapter '{}'", name);
+                    }
+                    startAsync(createAdapterInternal(protocolAdapterConfigs.get(name),
+                            versionProvider.getVersion())).get();
+                } catch (final InterruptedException e) {
+                    Thread.currentThread().interrupt();
+                    failedAdapters.add(name);
+                    log.error("Interrupted while adding adapter {}", name, e);
+                } catch (final ExecutionException e) {
                     failedAdapters.add(name);
                     log.error("Failed adding adapter {}", name, e);
                 }
@@ -173,29 +210,35 @@ public class ProtocolAdapterManager {
             adaptersToBeUpdated.forEach(name -> {
                 try {
                     final var wrapper = protocolAdapters.get(name);
-                    if(wrapper == null) {
-                        log.error("Existing adapters were modified while a refresh was ongoing, adapter with name '{}' was deleted and could not be updated", name);
+                    if (wrapper == null) {
+                        log.error(
+                                "Existing adapters were modified while a refresh was ongoing, adapter with name '{}' was deleted and could not be updated",
+                                name);
                     }
-                    if(wrapper != null && !protocolAdapterConfigs.get(name).equals(wrapper.getConfig())) {
-                        log.debug("Updating adapter '{}'", name);
-                        stopAsync(name, true)
-                                .thenApply(v -> {
+                    if (wrapper != null && !protocolAdapterConfigs.get(name).equals(wrapper.getConfig())) {
+                        if (log.isDebugEnabled()) {
+                            log.debug("Updating adapter '{}'", name);
+                        }
+                        stopAsync(name, true).thenApply(v -> {
                                     deleteAdapterInternal(name);
                                     return null;
                                 })
-                                .thenCompose(ignored ->
-                                        startAsync(
-                                                createAdapterInternal(protocolAdapterConfigs.get(name),
-                                                        versionProvider.getVersion())))
+                                .thenCompose(ignored -> startAsync(createAdapterInternal(protocolAdapterConfigs.get(name),
+                                        versionProvider.getVersion())))
                                 .get();
                     } else {
-                        log.debug("Not-updating adapter '{}' since the config is unchanged", name);
+                        if (log.isDebugEnabled()) {
+                            log.debug("Not-updating adapter '{}' since the config is unchanged", name);
+                        }
                     }
-                } catch (final InterruptedException | ExecutionException e) {
+                } catch (final InterruptedException e) {
+                    Thread.currentThread().interrupt();
+                    failedAdapters.add(name);
+                    log.error("Interrupted while updating adapter {}", name, e);
+                } catch (final ExecutionException e) {
                     failedAdapters.add(name);
                     log.error("Failed updating adapter {}", name, e);
                 }
-
             });
 
             if (failedAdapters.isEmpty()) {
@@ -212,6 +255,8 @@ public class ProtocolAdapterManager {
         });
     }
 
+    //INTERNAL
+
     public boolean protocolAdapterFactoryExists(final @NotNull String protocolAdapterType) {
         Preconditions.checkNotNull(protocolAdapterType);
         return protocolAdapterFactoryManager.get(protocolAdapterType).isPresent();
@@ -219,8 +264,7 @@ public class ProtocolAdapterManager {
 
     public @NotNull CompletableFuture<Void> startAsync(final @NotNull String protocolAdapterId) {
         Preconditions.checkNotNull(protocolAdapterId);
-        return getProtocolAdapterWrapperByAdapterId(protocolAdapterId)
-                .map(this::startAsync)
+        return getProtocolAdapterWrapperByAdapterId(protocolAdapterId).map(this::startAsync)
                 .orElseGet(() -> CompletableFuture.failedFuture(new ProtocolAdapterException("Adapter '" +
                         protocolAdapterId +
                         "'not found.")));
@@ -228,26 +272,31 @@ public class ProtocolAdapterManager {
 
     public @NotNull CompletableFuture<Void> stopAsync(final @NotNull String protocolAdapterId, final boolean destroy) {
         Preconditions.checkNotNull(protocolAdapterId);
-        return getProtocolAdapterWrapperByAdapterId(protocolAdapterId)
-                .map(wrapper -> stopAsync(wrapper, destroy))
+        return getProtocolAdapterWrapperByAdapterId(protocolAdapterId).map(wrapper -> stopAsync(wrapper, destroy))
                 .orElseGet(() -> CompletableFuture.failedFuture(new ProtocolAdapterException("Adapter '" +
                         protocolAdapterId +
                         "'not found.")));
     }
 
-    //INTERNAL
-
     private @NotNull ProtocolAdapterWrapper createAdapterInternal(
-            final @NotNull ProtocolAdapterConfig config, final @NotNull String version) {
+            final @NotNull ProtocolAdapterConfig config,
+            final @NotNull String version) {
         return protocolAdapters.computeIfAbsent(config.getAdapterId(), ignored -> {
-            final String adapterType = getKey(config.getProtocolId());
-            final Optional<ProtocolAdapterFactory<?>> protocolAdapterFactoryOptional =
-                    protocolAdapterFactoryManager.get(adapterType);
 
-            if (protocolAdapterFactoryOptional.isEmpty()) {
+            final String configProtocolId = config.getProtocolId();
+            // legacy handling, hardcoded here, to not add legacy stuff into the adapter-sdk
+            final String adapterType = switch (configProtocolId) {
+                case "ethernet-ip" -> "eip";
+                case "opc-ua-client" -> "opcua";
+                case "file_input" -> "file";
+                default -> configProtocolId;
+            };
+
+            final Optional<ProtocolAdapterFactory<?>> maybeFactory = protocolAdapterFactoryManager.get(adapterType);
+            if (maybeFactory.isEmpty()) {
                 throw new IllegalArgumentException("Protocol adapter for config " + adapterType + " not found.");
             }
-            final ProtocolAdapterFactory<?> protocolAdapterFactory = protocolAdapterFactoryOptional.get();
+            final ProtocolAdapterFactory<?> factory = maybeFactory.get();
 
             log.info("Found configuration for adapter {} / {}", config.getAdapterId(), adapterType);
             config.missingTags().ifPresent(missing -> {
@@ -257,70 +306,55 @@ public class ProtocolAdapterManager {
                         missing);
             });
 
-            final ClassLoader contextClassLoader = Thread.currentThread().getContextClassLoader();
-            try {
-                Thread.currentThread().setContextClassLoader(protocolAdapterFactory.getClass().getClassLoader());
+            return runWithContextLoader(factory.getClass().getClassLoader(), () -> {
 
-                final ProtocolAdapterMetricsService protocolAdapterMetricsService = new ProtocolAdapterMetricsServiceImpl(
-                        protocolAdapterFactory.getInformation().getProtocolId(),
-                        config.getAdapterId(),
-                        metricRegistry);
+                final ProtocolAdapterMetricsService metricsService =
+                        new ProtocolAdapterMetricsServiceImpl(configProtocolId, config.getAdapterId(), metricRegistry);
 
-                final ProtocolAdapterStateImpl protocolAdapterState =
-                        new ProtocolAdapterStateImpl(
-                                moduleServices.eventService(),
-                                config.getAdapterId(),
-                                protocolAdapterFactory.getInformation().getProtocolId());
+                final ProtocolAdapterStateImpl state =
+                        new ProtocolAdapterStateImpl(moduleServices.eventService(), config.getAdapterId(), configProtocolId);
 
-                final ModuleServicesPerModuleImpl moduleServicesPerModule =
-                        new ModuleServicesPerModuleImpl(
-                                moduleServices.adapterPublishService(),
+                final ModuleServicesPerModuleImpl perModule =
+                        new ModuleServicesPerModuleImpl(moduleServices.adapterPublishService(),
                                 eventService,
                                 protocolAdapterWritingService,
                                 tagManager);
-                final ProtocolAdapter protocolAdapter =
-                        protocolAdapterFactory.createAdapter(protocolAdapterFactory.getInformation(),
-                                new ProtocolAdapterInputImpl(
-                                        config.getProtocolId(),
-                                        config.getAdapterId(),
-                                        config.getAdapterConfig(),
-                                        config.getTags(),
-                                        config.getNorthboundMappings(),
-                                        version,
-                                        protocolAdapterState,
-                                        moduleServicesPerModule,
-                                        protocolAdapterMetricsService));
-                // hen-egg problem. Rather solve this here as have not final fields in the adapter.
-                moduleServicesPerModule.setAdapter(protocolAdapter);
 
-                final ProtocolAdapterWrapper wrapper = new ProtocolAdapterWrapper(
-                        protocolAdapterMetricsService,
+                final ProtocolAdapter protocolAdapter = factory.createAdapter(factory.getInformation(),
+                        new ProtocolAdapterInputImpl(configProtocolId,
+                                config.getAdapterId(),
+                                config.getAdapterConfig(),
+                                config.getTags(),
+                                config.getNorthboundMappings(),
+                                version,
+                                state,
+                                perModule,
+                                metricsService));
+                // hen-egg problem. Rather solve this here as have not final fields in the adapter.
+                perModule.setAdapter(protocolAdapter);
+
+                protocolAdapterMetrics.increaseProtocolAdapterMetric(configProtocolId);
+                return new ProtocolAdapterWrapper(metricsService,
                         protocolAdapterWritingService,
                         protocolAdapterPollingService,
                         config,
                         protocolAdapter,
-                        protocolAdapterFactory,
-                        protocolAdapterFactory.getInformation(),
-                        protocolAdapterState,
+                        factory,
+                        factory.getInformation(),
+                        state,
                         northboundConsumerFactory,
                         tagManager);
-
-                protocolAdapterMetrics.increaseProtocolAdapterMetric(config.getProtocolId());
-                return wrapper;
-
-            } finally {
-                Thread.currentThread().setContextClassLoader(contextClassLoader);
-            }
+            });
         });
     }
 
     private void deleteAdapterInternal(final @NotNull String adapterId) {
         final ProtocolAdapterWrapper wrapper = protocolAdapters.remove(adapterId);
-        if(wrapper != null) {
+        if (wrapper != null) {
             protocolAdapterMetrics.decreaseProtocolAdapterMetric(wrapper.getAdapterInformation().getProtocolId());
             eventService.createAdapterEvent(adapterId, wrapper.getProtocolAdapterInformation().getProtocolId())
                     .withSeverity(Event.SEVERITY.WARN)
-                    .withMessage(String.format("Adapter '%s' was deleted from the system permanently.", adapterId))
+                    .withMessage("Adapter '" + adapterId + "' was deleted from the system permanently.")
                     .fire();
         } else {
             log.warn("Tried to delete adapter '{}' but it was not found in the system.", adapterId);
@@ -328,72 +362,61 @@ public class ProtocolAdapterManager {
     }
 
     @VisibleForTesting
-    @NotNull
-    CompletableFuture<Void> startAsync(final @NotNull ProtocolAdapterWrapper protocolAdapterWrapper) {
-        Preconditions.checkNotNull(protocolAdapterWrapper);
+    @NotNull CompletableFuture<Void> startAsync(final @NotNull ProtocolAdapterWrapper wrapper) {
+        Preconditions.checkNotNull(wrapper);
+        final String wid = wrapper.getId();
+        log.info("Starting protocol-adapter '{}'.", wid);
+        return wrapper.startAsync(writingEnabled(), moduleServices).whenComplete((result, throwable) -> {
+            if (throwable == null) {
+                log.info("Protocol-adapter '{}' started successfully.", wid);
+                fireEvent(wrapper,
+                        HiveMQEdgeRemoteEvent.EVENT_TYPE.ADAPTER_STARTED,
+                        Event.SEVERITY.INFO,
+                        "Adapter '" + wid + "' started OK.");
+            } else {
+                log.warn("Protocol-adapter '{}' could not be started, reason: {}", wid, "unknown");
+                fireEvent(wrapper,
+                        HiveMQEdgeRemoteEvent.EVENT_TYPE.ADAPTER_ERROR,
+                        Event.SEVERITY.CRITICAL,
+                        "Error starting adapter '" + wid + "'.");
+            }
+        });
+    }
 
-        log.info("Starting protocol-adapter '{}'.", protocolAdapterWrapper.getId());
-
-        return protocolAdapterWrapper
-                .startAsync(writingEnabled(), moduleServices)
-                .whenComplete((result, throwable) -> {
-                    if(throwable == null) {
-                        log.info("Protocol-adapter '{}' started successfully.", protocolAdapterWrapper.getId());
-                        final HiveMQEdgeRemoteEvent adapterCreatedEvent =
-                                new HiveMQEdgeRemoteEvent(HiveMQEdgeRemoteEvent.EVENT_TYPE.ADAPTER_STARTED);
-                        adapterCreatedEvent.addUserData("adapterType",
-                                protocolAdapterWrapper.getProtocolAdapterInformation().getProtocolId());
-                        remoteService.fireUsageEvent(adapterCreatedEvent);
-
-                        eventService.createAdapterEvent(protocolAdapterWrapper.getId(),
-                                        protocolAdapterWrapper.getProtocolAdapterInformation().getProtocolId())
-                                .withSeverity(Event.SEVERITY.INFO)
-                                .withMessage(String.format("Adapter '%s' started OK.", protocolAdapterWrapper.getId()))
-                                .fire();
-                    } else {
-                        log.warn("Protocol-adapter '{}' could not be started, reason: {}",
-                                protocolAdapterWrapper.getId(), "unknown");
-                        final HiveMQEdgeRemoteEvent adapterCreatedEvent =
-                                new HiveMQEdgeRemoteEvent(HiveMQEdgeRemoteEvent.EVENT_TYPE.ADAPTER_ERROR);
-                        adapterCreatedEvent.addUserData("adapterType",
-                                protocolAdapterWrapper.getProtocolAdapterInformation().getProtocolId());
-                        remoteService.fireUsageEvent(adapterCreatedEvent);
-
-                        eventService.createAdapterEvent(protocolAdapterWrapper.getId(),
-                                        protocolAdapterWrapper.getProtocolAdapterInformation().getProtocolId())
-                                .withSeverity(Event.SEVERITY.CRITICAL)
-                                .withMessage("Error starting adapter '" + protocolAdapterWrapper.getId() + "'.")
-                                .fire();
-                    }
-                });
+    private void fireEvent(
+            final @NotNull ProtocolAdapterWrapper wrapper,
+            final @NotNull HiveMQEdgeRemoteEvent.EVENT_TYPE eventType,
+            final @NotNull Event.SEVERITY severity,
+            final @NotNull String message) {
+        final String protocolId = wrapper.getProtocolAdapterInformation().getProtocolId();
+        final HiveMQEdgeRemoteEvent event = new HiveMQEdgeRemoteEvent(eventType);
+        event.addUserData("adapterType", protocolId);
+        remoteService.fireUsageEvent(event);
+        eventService.createAdapterEvent(wrapper.getId(), protocolId).withSeverity(severity).withMessage(message).fire();
     }
 
     @VisibleForTesting
-    @NotNull CompletableFuture<Void> stopAsync(final @NotNull ProtocolAdapterWrapper protocolAdapterWrapper, final boolean destroy) {
-        Preconditions.checkNotNull(protocolAdapterWrapper);
-        log.info("Stopping protocol-adapter '{}'.", protocolAdapterWrapper.getId());
+    @NotNull CompletableFuture<Void> stopAsync(final @NotNull ProtocolAdapterWrapper wrapper, final boolean destroy) {
+        Preconditions.checkNotNull(wrapper);
+        log.info("Stopping protocol-adapter '{}'.", wrapper.getId());
 
-        return protocolAdapterWrapper
-                .stopAsync(destroy)
-                .whenComplete((result, throwable) -> {
-                    if(throwable == null) {
-                        log.info("Protocol-adapter '{}' stopped successfully.", protocolAdapterWrapper.getId());
-                        protocolAdapterWrapper.setRuntimeStatus(ProtocolAdapterState.RuntimeStatus.STOPPED);
-                        eventService.createAdapterEvent(protocolAdapterWrapper.getId(),
-                                        protocolAdapterWrapper.getProtocolAdapterInformation().getProtocolId())
-                                .withSeverity(Event.SEVERITY.INFO)
-                                .withMessage(String.format("Adapter '%s' stopped OK.", protocolAdapterWrapper.getId()))
-                                .fire();
-                    } else {
-                        log.warn("Protocol-adapter '{}' was unable to stop cleanly", protocolAdapterWrapper.getId());
-                        protocolAdapterWrapper.setRuntimeStatus(ProtocolAdapterState.RuntimeStatus.STOPPED);
-                        eventService.createAdapterEvent(protocolAdapterWrapper.getId(),
-                                        protocolAdapterWrapper.getProtocolAdapterInformation().getProtocolId())
-                                .withSeverity(Event.SEVERITY.CRITICAL)
-                                .withMessage("Error stopping adapter '" + protocolAdapterWrapper.getId() + "'.")
-                                .fire();
-                    }
-                });
+        return wrapper.stopAsync(destroy).whenComplete((result, throwable) -> {
+            final Event.SEVERITY severity;
+            final String message;
+            final String wid = wrapper.getId();
+            final String protocolId = wrapper.getProtocolAdapterInformation().getProtocolId();
+            if (throwable == null) {
+                log.info("Protocol-adapter '{}' stopped successfully.", wid);
+                severity = Event.SEVERITY.INFO;
+                message = "Adapter '" + wid + "' stopped OK.";
+            } else {
+                log.warn("Protocol-adapter '{}' was unable to stop cleanly", wrapper.getId());
+                severity = Event.SEVERITY.CRITICAL;
+                message = "Error stopping adapter '" + wid + "'.";
+            }
+            wrapper.setRuntimeStatus(ProtocolAdapterState.RuntimeStatus.STOPPED);
+            eventService.createAdapterEvent(wid, protocolId).withSeverity(severity).withMessage(message).fire();
+        });
     }
 
     private void updateAdapter(final ProtocolAdapterConfig protocolAdapterConfig) {
@@ -403,21 +426,18 @@ public class ProtocolAdapterManager {
 
     private boolean updateAdapterTags(final @NotNull String adapterId, final @NotNull List<? extends Tag> tags) {
         Preconditions.checkNotNull(adapterId);
-        return getProtocolAdapterWrapperByAdapterId(adapterId)
-                .map(wrapper -> {
-                    final var protocolId = wrapper.getAdapterInformation().getProtocolId();
-                    final var protocolAdapterConfig = new ProtocolAdapterConfig(
-                            wrapper.getId(),
-                            protocolId,
-                            wrapper.getAdapterInformation().getCurrentConfigVersion(),
-                            wrapper.getConfigObject(),
-                            wrapper.getSouthboundMappings(),
-                            wrapper.getNorthboundMappings(),
-                            tags);
-                    updateAdapter(protocolAdapterConfig);
-                    return true;
-                })
-                .orElse(false);
+        return getProtocolAdapterWrapperByAdapterId(adapterId).map(wrapper -> {
+            final var protocolId = wrapper.getAdapterInformation().getProtocolId();
+            final var protocolAdapterConfig = new ProtocolAdapterConfig(wrapper.getId(),
+                    protocolId,
+                    wrapper.getAdapterInformation().getCurrentConfigVersion(),
+                    wrapper.getConfigObject(),
+                    wrapper.getSouthboundMappings(),
+                    wrapper.getNorthboundMappings(),
+                    tags);
+            updateAdapter(protocolAdapterConfig);
+            return true;
+        }).orElse(false);
     }
 
     public @NotNull Optional<ProtocolAdapterWrapper> getProtocolAdapterWrapperByAdapterId(final @NotNull String id) {
@@ -435,33 +455,30 @@ public class ProtocolAdapterManager {
         return protocolAdapterFactoryManager.getAllAvailableAdapterTypes();
     }
 
-
     public @NotNull Map<String, ProtocolAdapterWrapper> getProtocolAdapters() {
         return Map.copyOf(protocolAdapters);
     }
-
 
     public boolean writingEnabled() {
         return protocolAdapterWritingService.writingEnabled();
     }
 
     public @NotNull DomainTagAddResult addDomainTag(
-            final @NotNull String adapterId, final @NotNull DomainTag domainTag) {
-        return getProtocolAdapterWrapperByAdapterId(adapterId)
-                .map(wrapper -> {
-                    final var tags = new ArrayList<>(wrapper.getTags());
-                    final boolean alreadyExists = tags.stream().anyMatch(t -> t.getName().equals(domainTag.getTagName()));
-                    if (!alreadyExists) {
-                        tags.add(configConverter.domainTagToTag(wrapper.getProtocolAdapterInformation().getProtocolId(),
-                                domainTag));
+            final @NotNull String adapterId,
+            final @NotNull DomainTag domainTag) {
+        return getProtocolAdapterWrapperByAdapterId(adapterId).map(wrapper -> {
+            final var tags = new ArrayList<>(wrapper.getTags());
+            final boolean alreadyExists = tags.stream().anyMatch(t -> t.getName().equals(domainTag.getTagName()));
+            if (!alreadyExists) {
+                tags.add(configConverter.domainTagToTag(wrapper.getProtocolAdapterInformation().getProtocolId(),
+                        domainTag));
 
-                        updateAdapterTags(adapterId, tags);
-                        return DomainTagAddResult.success();
-                    } else {
-                        return DomainTagAddResult.failed(ALREADY_EXISTS, adapterId);
-                    }
-                })
-                .orElse(DomainTagAddResult.failed(ADAPTER_MISSING, adapterId));
+                updateAdapterTags(adapterId, tags);
+                return DomainTagAddResult.success();
+            } else {
+                return DomainTagAddResult.failed(ALREADY_EXISTS, adapterId);
+            }
+        }).orElse(DomainTagAddResult.failed(ADAPTER_MISSING, adapterId));
     }
 
     public @NotNull List<DomainTag> getDomainTags() {
@@ -473,7 +490,7 @@ public class ProtocolAdapterManager {
                                 wrapper.getId(),
                                 tag.getDescription(),
                                 configConverter.convertTagDefinitionToJsonNode(tag.getDefinition()))))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public @NotNull Optional<DomainTag> getDomainTagByName(final @NotNull String tagName) {
@@ -490,34 +507,12 @@ public class ProtocolAdapterManager {
     }
 
     public @NotNull Optional<List<DomainTag>> getTagsForAdapter(final @NotNull String adapterId) {
-        return getProtocolAdapterWrapperByAdapterId(adapterId).map(adapterToConfig ->
-                adapterToConfig.getTags()
+        return getProtocolAdapterWrapperByAdapterId(adapterId).map(adapterToConfig -> adapterToConfig.getTags()
                 .stream()
                 .map(tag -> new DomainTag(tag.getName(),
                         adapterToConfig.getId(),
                         tag.getDescription(),
                         configConverter.convertTagDefinitionToJsonNode(tag.getDefinition())))
-                .collect(Collectors.toList()));
+                .toList());
     }
-
-    private static void syncFuture(final @NotNull Future<?> future) {
-        try {
-            future.get();
-        } catch (final InterruptedException e) {
-            Thread.currentThread().interrupt();
-        } catch (final ExecutionException e) {
-            log.error("Exception happened while async execution: ", e.getCause());
-        }
-    }
-
-    //legacy handling, hardcoded here, to not add legacy stuff into the adapter-sdk
-    private static @NotNull String getKey(final @NotNull String key) {
-        return switch (key) {
-            case "ethernet-ip" -> "eip";
-            case "opc-ua-client" -> "opcua";
-            case "file_input" -> "file";
-            default -> key;
-        };
-    }
-
 }
